ObserverDAO unit test